--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -172,8 +172,8 @@
 
         <section class="section speaker">
             <div class="speaker-text">
-                <h3><font color="#355DDC">Title: How To Write Papers</font></h3>
-                <p><b>Speaker:</b> <a href="#", target="_blank">Heng Fan</a></p>
+                <h3><font color="#355DDC">Title: TBD</font></h3>
+                <p><b>Speaker:</b> <a href="#", target="_blank">Shaohua Dong</a></p>
                 <p><b>Time:</b> 11:00am-12:00pm on 11-18-2024 (Monday)</p>
                 <p><b>Room:</b> F219 </p>
             </div>
@@ -181,8 +181,8 @@
 
         <section class="section speaker">
             <div class="speaker-text">
-                <h3><font color="#355DDC">TBD</font></h3>
-                <p><b>Speaker:</b> <a href="#", target="_blank">TBD</a></p>
+                <h3><font color="#355DDC">Title: How to write</font></h3>
+                <p><b>Speaker:</b> <a href="#", target="_blank">Dr. Heng Fan</a></p>
                 <p><b>Time:</b> 10:00am-11:00pm on 12-02-2024 (Monday)</p>
                 <p><b>Room:</b> <font color="purple">F219</font></p>
                 <br>
