--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -184,12 +184,13 @@
                 <h3><font color="#355DDC">Title: How to write</font></h3>
                 <p><b>Speaker:</b> <a href="#", target="_blank">Dr. Heng Fan</a></p>
                 <p><b>Time:</b> 10:00am-11:00pm on 12-02-2024 (Monday)</p>
-                <p><b>Room:</b> <font color="purple">F219</font></p>
+                <p><b>Room:</b> <font color="purple">F285</font></p>
+                <p><b>Note:</b> <font color="color">(This is NOT fully determined)</font></p>
                 <br>
                 <h3><font color="#355DDC">Title: TBD</font></h3>
                 <p><b>Speaker:</b> <a href="#", target="_blank">Dawei Gao</a></p>
                 <p><b>Time:</b> 11:00am-12:00pm on 12-02-2024 (Monday)</p>
-                <p><b>Room:</b> <font color="purple">F219</font></p>
+                <p><b>Room:</b> <font color="purple">F285</font></p>
             </div>
         </section>
 
