--- a/teaching/24F-6280/index.htm
+++ b/teaching/24F-6280/index.htm
@@ -599,6 +599,9 @@ div img:hover{
 							<li>
 								Joseph Caldwell
 							</li>
+							<li>
+								Shengping Bi and Ruixiao Huang
+							</li>
 						</ul>
 
 						<br>
