--- a/teaching/24F-6280/index.htm
+++ b/teaching/24F-6280/index.htm
@@ -602,6 +602,9 @@ div img:hover{
 							<li>
 								Shengping Bi and Ruixiao Huang
 							</li>
+							<li>
+								Morui Zhu, Donger Chen, and Yihao Zhu
+							</li>
 						</ul>
 
 						<br>
