--- a/teaching/24F-6280/index.htm
+++ b/teaching/24F-6280/index.htm
@@ -605,6 +605,9 @@ div img:hover{
 							<li>
 								Morui Zhu, Donger Chen, and Yihao Zhu
 							</li>
+							<li>
+								Minghao Li, Mingchen Li, and Dawei Gao
+							</li>
 						</ul>
 
 						<br>
