--- a/teaching/24F-6280/index.htm
+++ b/teaching/24F-6280/index.htm
@@ -608,6 +608,9 @@ div img:hover{
 							<li>
 								Minghao Li, Mingchen Li, and Dawei Gao
 							</li>
+							<li>
+								Yen Pham
+							</li>
 						</ul>
 
 						<br>
