--- a/teaching/24F-6280/index.htm
+++ b/teaching/24F-6280/index.htm
@@ -611,6 +611,9 @@ div img:hover{
 							<li>
 								Yen Pham
 							</li>
+							<li>
+								Bing Fan
+							</li>
 						</ul>
 
 						<br>
