--- a/teaching/24F-6280/index.htm
+++ b/teaching/24F-6280/index.htm
@@ -614,6 +614,12 @@ div img:hover{
 							<li>
 								Bing Fan
 							</li>
+							<li>
+								Bizhan AlipourPijani and Suman Pandey
+							</li>
+							<lii>
+								Piyush Deepak Hemnani
+							</lii>
 						</ul>
 
 						<br>
