--- a/teaching/24F-6280/index.htm
+++ b/teaching/24F-6280/index.htm
@@ -617,8 +617,14 @@ div img:hover{
 							<li>
 								Bizhan AlipourPijani and Suman Pandey
 							</li>
-							<lii>
+							<li>
 								Piyush Deepak Hemnani
+							</li>
+							<li>
+								Michael Oluwole
+							</li>
+							<li>
+								Syed Ali
 							</li>
 						</ul>
 
