--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -179,7 +179,7 @@
             </div>
         </section>
 
-        <section class="section speaker">
+        <!-- <section class="section speaker">
             <div class="speaker-text">
                 <h3><font color="#355DDC">Title: How to write</font></h3>
                 <p><b>Speaker:</b> <a href="#", target="_blank">Dr. Heng Fan</a></p>
@@ -192,7 +192,7 @@
                 <p><b>Time:</b> 11:00am-12:00pm on 12-02-2024 (Monday)</p>
                 <p><b>Room:</b> <font color="purple">F285</font></p>
             </div>
-        </section>
+        </section> -->
 
         
 
