--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -172,7 +172,7 @@
 
         <section class="section speaker">
             <div class="speaker-text">
-                <h3><font color="#355DDC">Title: TBD</font></h3>
+                <h3><font color="#355DDC">Title: Mixture-of-Depths: Dynamically allocating compute in transformer-based language models </font></h3>
                 <p><b>Speaker:</b> <a href="#", target="_blank">Shaohua Dong</a></p>
                 <p><b>Time:</b> 11:00am-12:00pm on 11-18-2024 (Monday)</p>
                 <p><b>Room:</b> F219 </p>
