--- a/aiseminar/S24.htm
+++ b/aiseminar/S24.htm
@@ -85,7 +85,7 @@
 
 		
 
-		<h2><font color="#FA8072">Upcoming Events</font></h2>
+		<h2><font color="#FA8072">Schedule</font></h2>
 
         
 
@@ -101,9 +101,6 @@
             </div>
         </section>
 
-        <br>
-
-        <h2><font color="#7FB3D5">Past Events</font></h2>
 
         <section class="section speaker">
             <div class="speaker-text">
