--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 			[<a href="https://www.linkedin.com/in/%E6%81%92-%E6%A8%8A-64697aaa/" target="https://www.linkedin.com/in/%E6%81%92-%E6%A8%8A-64697aaa/"><font color="#2D61FF">LinkedIn</font></a>]
 			[<a href="https://dblp.org/pid/20/10120-1.html" target="https://dblp.org/pid/20/10120-1.html"><font color="#2D61FF">DBLP</font></a>]
 			[<a href="https://hengfan2010.github.io/aiseminar/" target="https://hengfan2010.github.io/aiseminar/"><font color="#2D61FF">AI Seminar</font></a>]
+			[<a href="https://docs.google.com/presentation/d/1wdwfl_4dIy9jdCXKxnXpjRVUdy7aOxjE/edit?usp=sharing&ouid=116478199769662584478&rtpof=true&sd=true" target="https://hengfan2010.github.io/aiseminar/"><font color="#2D61FF">Tracking Benchmarks</font></a>]
         </div>
     </div>
 	
