--- a/publications.html
+++ b/publications.html
@@ -135,7 +135,7 @@
 						<br>
 						<font color="#000000" >M. Guo, Z. Zhang, L. Jing, Y. He, K. Wang, and H. Fan</font>
 						<br>
-						<font>International Journal of Computer Vision (<b>IJCV</b>), 2024, accepted.</font>
+						<font>International Journal of Computer Vision (<b>IJCV</b>), 132: 6184–6206, 2024.</font>
 						<br>
 						<a href="./publication/CyclicRefiner.pdf" target="_blank"><font color="#2D61FF">paper</font></a> 
 						<br>
