--- a/publications.html
+++ b/publications.html
@@ -29,7 +29,7 @@
 
 	<font size="3">For full publication list, please go to my <a href="https://scholar.google.com/citations?user=MVQYJiMAAAAJ" target="https://scholar.google.com/citations?user=MVQYJiMAAAAJ"><font color="#2D61FF">Google Scholar profile</font></a>.</font>
 	<br>
-	(*equal contribution &nbsp;&nbsp;&nbsp; &dagger;equal advising and co-last authors)
+	(*equal contribution, &dagger;equal advising and co-last authors)
 	<!-- <HR> -->
 	
 	<!-- <font size="4" color="#2D61FF"><b>Pre-prints</b></font>
