--- a/publications.html
+++ b/publications.html
@@ -90,7 +90,33 @@
 	<!-- </table> -->
 
 	<HR>
-		<font size="4" color="black"><b>2024 / in press</b></font>
+
+		<font size="4" color="black"><b>2025 / in press</b></font>
+		<br>
+	
+		<table border=0 cellpadding=4>
+
+			<tr>
+				<td><img src="./publication/attmot.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">AttMOT: Improving Multiple-Object Tracking by Introducing Auxiliary Pedestrian Attributes</font>
+						<br>
+						<font color="#000000" >Y. Li, Z. Xiao, L. Yang, D. Meng, X. Zhou, H. Fan, and L. Zhang</font>
+						<br>
+						<font>IEEE Transactions on Neural Networks and Learning Systems (<b>T-NNLS</b>), 2025, in press. </font>
+						<br>
+						<a href="https://arxiv.org/abs/2308.07537" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://github.com/HengLan/AttMOT" target="_blank"><font color="#2D61FF">code</font></a>
+						<br>
+					</p>
+				</td>
+			</tr>
+
+		</table>
+
+
+		<HR>
+		<font size="4" color="black"><b>2024</b></font>
 		<br>
 	
 		<table border=0 cellpadding=4>
@@ -232,22 +258,6 @@
 						<font>IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>PAMI</b>), 46(12): 8600-8618, 2024. </font>
 						<br>
 						<a href="https://arxiv.org/abs/2307.10046" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://github.com/JudasDie/SOTS" target="_blank"><font color="#2D61FF">code</font></a>
-						<br>
-					</p>
-				</td>
-			</tr>
-
-			<tr>
-				<td><img src="./publication/attmot.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
-				<td valign=top>
-					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
-						<font style="font-weight:bold">AttMOT: Improving Multiple-Object Tracking by Introducing Auxiliary Pedestrian Attributes</font>
-						<br>
-						<font color="#000000" >Y. Li, Z. Xiao, L. Yang, D. Meng, X. Zhou, H. Fan, and L. Zhang</font>
-						<br>
-						<font>IEEE Transactions on Neural Networks and Learning Systems (<b>T-NNLS</b>), 2024, accepted. </font>
-						<br>
-						<a href="https://arxiv.org/abs/2308.07537" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://github.com/HengLan/AttMOT" target="_blank"><font color="#2D61FF">code</font></a>
 						<br>
 					</p>
 				</td>
