--- a/service.html
+++ b/service.html
@@ -31,10 +31,24 @@
 	<br>
 	
     <ul style="margin-top:5px;">
-	
+		
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				Area Chair, IEEE International Conference on Computer Vision (<font style="font-weight:bold">ICCV</font>), 2025
+				<br>
+			</p>
+		</li>
+
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
 				Area Chair, IEEE Winter Conference on Applications of Computer Vision (<font style="font-weight:bold">WACV</font>), 2022, 2023, 2024, 2025
+				<br>
+			</p>
+		</li>
+
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				Area Chair, IEEE International Conference on Multimedia & Expo (<font style="font-weight:bold">ICME</font>), 2025
 				<br>
 			</p>
 		</li>
