--- a/service.html
+++ b/service.html
@@ -135,7 +135,7 @@
 		
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				IEEE Conference on Computer Vision and Pattern Recognition (<font style="font-weight:bold">CVPR</font>)</font>, <font size="3">2019 (<font style="font-weight:bold" color="#034f84">Outstanding Reviewer</font>), 2020, 2021, 2022, 2023, 2024</font>
+				IEEE Conference on Computer Vision and Pattern Recognition (<font style="font-weight:bold">CVPR</font>)</font>, <font size="3">2019 (<font style="font-weight:bold" color="#034f84">Outstanding Reviewer</font>), 2020, 2021, 2022, 2023, 2024, 2025</font>
 				<br>
 			</p>
 		</li>
