--- a/group.html
+++ b/group.html
@@ -36,11 +36,10 @@
 		<li><font style="font-weight:bold; line-height: 120%">Andres Escamilla Varela</font>, MS student</li>
 		
 		<li><font style="font-weight:bold; line-height: 120%">Jashia Mitayeegiri</font>, volunteer research assistant</li> <!--(female)--> 
-		<li><font style="font-weight:bold; line-height: 120%">Syed Abdullah Imam</font>, Undergraduate student</li>
-		<li><font style="font-weight:bold; line-height: 120%">Joshua Yao</font>, Undergraduate student</li> <!--(minority)--> 
+		
 		<li><font style="font-weight:bold; line-height: 120%">Hasini Kanuru</font>, Undergraduate student</li> <!--(female)--> 
 		<li><font style="font-weight:bold; line-height: 120%">Luke Liu</font>, High School student</li> <!-- entennial High School -->
-		<li><font style="font-weight:bold; line-height: 120%">Arpit Khavate</font>, High School student</li> <!-- ebanon Trail High School -->
+		
 		<li><font style="font-weight:bold; line-height: 120%">Jonas Li</font>, High School student</li>
     </ul>
 
@@ -59,6 +58,9 @@
 	<font size="4" color="black"><b>Alumni</b></font>
 	<br>
 	<ul style="margin-top:5px;">
+		<li><font style="font-weight:bold; line-height: 120%">Arpit Khavate</font>, High School student, 2024</li> <!-- ebanon Trail High School -->
+		<li><font style="font-weight:bold; line-height: 120%">Syed Abdullah Imam</font>, Undergraduate student, 2024</li>
+		<li><font style="font-weight:bold; line-height: 120%">Joshua Yao</font>, Undergraduate student, 2024</li> <!--(minority)--> 
 		<li><font style="font-weight:bold; line-height: 120%">Jashia Mitayeegiri</font>, MS, 2024</li> <!--(female)--> 
 		<li><font style="font-weight:bold; line-height: 120%">Pranay Rishith Bondugula</font>, MS, 2024</li>
 		<li><font style="font-weight:bold; line-height: 120%">Saikiran Motati</font>, K-12 student from TAMS, 2024</li>
