--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -79,7 +79,7 @@
             <p>This is the home page for the UNT Artificial Intelligence (AI) Seminar Series, which aim to cover a broad variety of AI topics, such as computer vision, machine learning, AI fairness & ethics, multimodal learning, etc. 
 			The goal is to facilitate research discussion and collaboration in different areas of AI.</p>
 			<p><b>Time:</b> Unless otherwise noted, the events are on Mondays at 11:00am-12:00pm (every week).</p>
-			<p><b>Room:</b> Unless otherwise noted, we will meet at Discover Park F219 or F285 in person (see the schedule on Google sheet for each event).<br></p>
+			<p><b>Room:</b> Unless otherwise noted, we will meet at Discover Park F219 in person (see the schedule on Google sheet for each event).<br></p>
             <p><b>Who can attend?</b> All students (PhD/MS/Undergraduate/K-12 students) who are interested in AI are welcome to attend.</p>
         </section>
 
@@ -89,110 +89,31 @@
 
         
 
-        <!-- <section class="section speaker">
-            <div class="speaker-text">
-                <h3><font color="#355DDC">Title: Bayesian Inference, Uncertainty, Neural network</font></h3>
-                <p><b>Speaker:</b> <a href="#", target="_blank">Minghao Li</a></p>
-                <p><b>Time:</b> 11:00am-12:00pm on 08-26-2024 (Monday)</p>
-                <p><b>Room:</b> F219 </p>
-            </div>
-        </section>
-
         <section class="section speaker">
             <div class="speaker-text">
-                <h3><font color="#355DDC">Title: Visual Question Answering in Continual Learning </font></h3>
-                <p><b>Speaker:</b> <a href="#", target="_blank">Md Abdullah Al Forhad</a></p>
-                <p><b>Time:</b> 11:00am-12:00pm on 09-16-2024 (Monday)</p>
-                <p><b>Room:</b> F219 </p>
-            </div>
-        </section>
-
-        <section class="section speaker">
-            <div class="speaker-text">
-                <h3><font color="#355DDC">Title: Task-Driven Causal Feature Distillation: Towards Trustworthy Risk Prediction</font></h3>
-                <p><b>Speaker:</b> <a href="#", target="_blank">Dawei Gao</a></p>
-                <p><b>Time:</b> 11:00am-12:00pm on 09-23-2024 (Monday)</p>
-                <p><b>Room:</b> F219 </p>
-            </div>
-        </section>
-
-        <section class="section speaker">
-            <div class="speaker-text">
-                <h3><font color="#355DDC">Title: ORPO: Monolithic Preference Optimization without Reference Model</font></h3>
-                <p><b>Speaker:</b> <a href="#", target="_blank">Zexuan Meng</a></p>
-                <p><b>Time:</b> 11:00am-12:00pm on 09-30-2024 (Monday)</p>
-                <p><b>Room:</b> F219 </p>
-            </div>
-        </section>
-
-        <section class="section speaker">
-            <div class="speaker-text">
-                <h3><font color="#355DDC">Title: Mamba: Linear-Time Sequence Modeling with Selective State Spaces</font></h3>
-                <p><b>Speaker:</b> <a href="#", target="_blank">Bing Fan</a></p>
-                <p><b>Time:</b> 11:00am-12:00pm on 10-07-2024 (Monday)</p>
-                <p><b>Room:</b> <font color="purple">F285 (not F219)</font></p>
-            </div>
-        </section>
-
-        <section class="section speaker">
-            <div class="speaker-text">
-                <h3><font color="#355DDC">Title: MoA: Mixture of Sparse Attention for Automatic Large Language Model Compression</font></h3>
-                <p><b>Speaker:</b> <a href="#", target="_blank">Hanzhi Zhang</a></p>
-                <p><b>Time:</b> 11:00am-12:00pm on 10-14-2024 (Monday)</p>
-                <p><b>Room:</b> F219 </p>
-            </div>
-        </section>
-
-        <section class="section speaker">
-            <div class="speaker-text">
-                <h3><font color="#355DDC">Title: Dynamic Resolution Network</font></h3>
-                <p><b>Speaker:</b> <a href="#", target="_blank">Shaohua Dong</a></p>
-                <p><b>Time:</b> 11:00am-12:00pm on 10-21-2024 (Monday)</p>
-                <p><b>Room:</b> F219 </p>
-            </div>
-        </section>
-
-        <section class="section speaker">
-            <div class="speaker-text">
-                <h3><font color="#355DDC">Title: Active Learning for Object Detection with Evidential Deep Learning and Hierarchical Uncertainty Aggregation</font></h3>
-                <p><b>Speaker:</b> <a href="#", target="_blank">Minghao Li</a></p>
-                <p><b>Time:</b> 11:00am-12:00pm on 10-28-2024 (Monday)</p>
-                <p><b>Room:</b> F219 </p>
-            </div>
-        </section>
-
-        <section class="section speaker">
-            <div class="speaker-text">
-                <h3><font color="#355DDC">Title: Privacy-preserving In-Context Learning for Large Language Models</font></h3>
-                <p><b>Speaker:</b> <a href="#", target="_blank">Mingchen Li</a></p>
-                <p><b>Time:</b> 11:00am-12:00pm on 11-04-2024 (Monday)</p>
-                <p><b>Room:</b> <font color="purple">F285 (not F219)</font></p>
-            </div>
-        </section>
-
-        <section class="section speaker">
-            <div class="speaker-text">
-                <h3><font color="#355DDC">Title: Mixture-of-Depths: Dynamically allocating compute in transformer-based language models </font></h3>
-                <p><b>Speaker:</b> <a href="#", target="_blank">Shaohua Dong</a></p>
-                <p><b>Time:</b> 11:00am-12:00pm on 11-18-2024 (Monday)</p>
-                <p><b>Room:</b> F219 </p>
-            </div>
-        </section> -->
-
-        <!-- <section class="section speaker">
-            <div class="speaker-text">
-                <h3><font color="#355DDC">Title: How to write</font></h3>
-                <p><b>Speaker:</b> <a href="#", target="_blank">Dr. Heng Fan</a></p>
-                <p><b>Time:</b> 10:00am-11:00pm on 12-02-2024 (Monday)</p>
-                <p><b>Room:</b> <font color="purple">F285</font></p>
-                <p><b>Note:</b> <font color="color">(This is NOT fully determined)</font></p>
-                <br>
                 <h3><font color="#355DDC">Title: TBD</font></h3>
                 <p><b>Speaker:</b> <a href="#", target="_blank">Dawei Gao</a></p>
-                <p><b>Time:</b> 11:00am-12:00pm on 12-02-2024 (Monday)</p>
-                <p><b>Room:</b> <font color="purple">F285</font></p>
+                <p><b>Time:</b> 11:00am-12:00pm on 01-20-2024 (Monday)</p>
+                <p><b>Room:</b> F219 </p>
             </div>
-        </section> -->
+            <!-- <div class="speaker-img">
+                <img src="welcome7.png" alt="Speaker Image"> 
+            </div> -->
+        </section>
+
+        <section class="section speaker">
+            <div class="speaker-text">
+                <h3><font color="#355DDC">Title: Audio-visual Scene Perception and Generation</font></h3>
+                <p><b>Speaker:</b> <a href="https://www.yapengtian.com/", target="_blank">Dr. Yapeng Tian</a> from The University of Texas at Dallas</p>
+                <p><b>Time:</b> 11:00am-12:00pm on 01-27-2024 (Monday)</p>
+                <p><b>Room:</b> F219 </p>
+            </div>
+            <!-- <div class="speaker-img">
+                <img src="welcome7.png" alt="Speaker Image"> 
+            </div> -->
+        </section>
+
+        </section>
 
         
 
