--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -83,11 +83,7 @@
             <p><b>Who can attend?</b> All students (PhD/MS/Undergraduate/K-12 students) who are interested in AI are welcome to attend.</p>
         </section>
 
-		
-
-		<h2><font color="#FA8072">Schedule (to be updated)</font></h2>
-
-        
+		<h2><font color="#FA8072">Schedule (temporary)</font></h2>
 
         <section class="section speaker">
             <div class="speaker-text">
@@ -108,9 +104,113 @@
                 <p><b>Time:</b> 11:00am-12:00pm on 01-27-2024 (Monday)</p>
                 <p><b>Room:</b> F219 </p>
             </div>
-            <!-- <div class="speaker-img">
-                <img src="welcome7.png" alt="Speaker Image"> 
-            </div> -->
+        </section>
+
+        <section class="section speaker">
+            <div class="speaker-text">
+                <h3><font color="#355DDC">Title: TBD</font></h3>
+                <p><b>Speaker:</b> <a href="#", target="_blank">Minghao Li</a></p>
+                <p><b>Time:</b> 11:00am-12:00pm on 02-03-2025 (Monday)</p>
+                <p><b>Room:</b> F219 </p>
+            </div>
+        </section>
+
+        <section class="section speaker">
+            <div class="speaker-text">
+                <h3><font color="#355DDC">Title: TBD</font></h3>
+                <p><b>Speaker:</b> <a href="#", target="_blank">Md Abdullah Al Forhad</a></p>
+                <p><b>Time:</b> 11:00am-12:00pm on 02-10-2025 (Monday)</p>
+                <p><b>Room:</b> F219 </p>
+            </div>
+        </section>
+
+        <section class="section speaker">
+            <div class="speaker-text">
+                <h3><font color="#355DDC">Title: TBD</font></h3>
+                <p><b>Speaker:</b> <a href="#", target="_blank">Zexuan Meng</a></p>
+                <p><b>Time:</b> 11:00am-12:00pm on 02-17-2025 (Monday)</p>
+                <p><b>Room:</b> F219 </p>
+            </div>
+        </section>
+
+        <section class="section speaker">
+            <div class="speaker-text">
+                <h3><font color="#355DDC">Title: TBD</font></h3>
+                <p><b>Speaker:</b> <a href="#", target="_blank">Hanzhi Zhang</a></p>
+                <p><b>Time:</b> 11:00am-12:00pm on 02-24-2025 (Monday)</p>
+                <p><b>Room:</b> F219 </p>
+            </div>
+        </section>
+
+        <section class="section speaker">
+            <div class="speaker-text">
+                <h3><font color="#355DDC">Title: How to Sell Your Story</font></h3>
+                <p><b>Speaker:</b> <a href="#", target="_blank">Drs. Fan, Feng, and Shi</a></p>
+                <p><b>Time:</b> 11:00am-12:00pm on 03-03-2025 (Monday)</p>
+                <p><b>Room:</b> F219 </p>
+            </div>
+        </section>
+
+        <section class="section speaker">
+            <div class="speaker-text">
+                <h3><font color="red">Spring Break</font></h3>
+                <p><b>Speaker:</b> <a href="#", target="_blank">No Presentation</a></p>
+                <p><b>Time:</b> 03-10-2025 (Monday)</p>
+            </div>
+        </section>
+
+        <section class="section speaker">
+            <div class="speaker-text">
+                <h3><font color="#355DDC">Title: TBD</font></h3>
+                <p><b>Speaker:</b> <a href="#", target="_blank">Bing Fan</a></p>
+                <p><b>Time:</b> 11:00am-12:00pm on 03-17-2025 (Monday)</p>
+                <p><b>Room:</b> F219 </p>
+            </div>
+        </section>
+
+        <section class="section speaker">
+            <div class="speaker-text">
+                <h3><font color="#355DDC">Title: TBD</font></h3>
+                <p><b>Speaker:</b> <a href="#", target="_blank">Mingchen Li</a></p>
+                <p><b>Time:</b> 11:00am-12:00pm on 03-24-2025 (Monday)</p>
+                <p><b>Room:</b> F219 </p>
+            </div>
+        </section>
+
+        <section class="section speaker">
+            <div class="speaker-text">
+                <h3><font color="#355DDC">Title: TBD</font></h3>
+                <p><b>Speaker:</b> <a href="#", target="_blank">Junjie Qiu</a></p>
+                <p><b>Time:</b> 11:00am-12:00pm on 03-31-2025 (Monday)</p>
+                <p><b>Room:</b> F219 </p>
+            </div>
+        </section>
+
+        <section class="section speaker">
+            <div class="speaker-text">
+                <h3><font color="#355DDC">Title: TBD</font></h3>
+                <p><b>Speaker:</b> <a href="#", target="_blank">Dawei Gao</a></p>
+                <p><b>Time:</b> 11:00am-12:00pm on 04-07-2025 (Monday)</p>
+                <p><b>Room:</b> F219 </p>
+            </div>
+        </section>
+
+        <section class="section speaker">
+            <div class="speaker-text">
+                <h3><font color="#355DDC">Title: TBD</font></h3>
+                <p><b>Speaker:</b> <a href="#", target="_blank">Shaohua Dong</a></p>
+                <p><b>Time:</b> 11:00am-12:00pm on 04-14-2025 (Monday)</p>
+                <p><b>Room:</b> F219 </p>
+            </div>
+        </section>
+
+        <section class="section speaker">
+            <div class="speaker-text">
+                <h3><font color="#355DDC">Title: TBD</font></h3>
+                <p><b>Speaker:</b> <a href="https://idealabunt.github.io/home/haihua-chen.html", target="_blank">Dr. Haihua Chen</a> from Data Science at UNT</p>
+                <p><b>Time:</b> 11:00am-12:00pm on 04-21-2025 (Monday)</p>
+                <p><b>Room:</b> F219 </p>
+            </div>
         </section>
 
         </section>
