--- a/teaching/25S-5218/index.htm
+++ b/teaching/25S-5218/index.htm
@@ -36,7 +36,7 @@ div img:hover{
 	
     <p style="margin-top:5px;">
 	<center>
-	<font size="4"> <b>Spring 2024</b></font> &nbsp; &nbsp; 
+	<font size="4"> <b>Spring 2025</b></font> &nbsp; &nbsp; 
 	<br>
 	</center>
 	</p>
@@ -56,7 +56,7 @@ div img:hover{
 			<font size="4"> Office: Discovery Park F284 </font>
 		</li>
 		<li>
-			<font size="4"> Office hours: Tu 2:30 – 4:00 pm or by appointment</font>
+			<font size="4"> Office hours: Th 11:30 am-1:00 pm or by appointment</font>
 		</li>
 		<br>
 		<li>
@@ -66,15 +66,20 @@ div img:hover{
 			<font size="4"> Classroom: NTDP K110</font>
 		</li>
 		<li>
-			<font size="4"> Syllabus: <a href=".\Deep Learning-Syllabus-Spring 2024.pdf" target="_blank"><font color="#0099ff">PDF</font></a></font>
+			<font size="4"> Syllabus: <a href=".\Deep Learning-Syllabus-Spring 2025.pdf" target="_blank"><font color="#0099ff">PDF</font></a></font>
 		</li>
 		
 		<br>
 		<li>
-			<font size="4"> IA: Rinoj Gautam (RinojGautam@my.unt.edu)</font>
+			<font size="4"> TA: Mingchen Li (mingchenli@my.unt.edu)</font>
+			<br>
+			<font size="4">Office Hours: 3:00-5:00 pm on Wed, F221 or by appointment</font>
 		</li>
+		<br>
 		<li>
 			<font size="4"> IA: Piyush Deepak Hemnani (PiyushHemnani@my.unt.edu)</font>
+			<br>
+			<font size="4"> Office Hours: 12:00-2:00 pm on Friday (via appointment)</font>
 		</li>
 	</ul>
 	</p>
@@ -157,14 +162,14 @@ course website regularly for updated reading materials.</font>
 		<li>
 			<font size="4"> <b>02/09/2023:</b> Paper review list 1 is out, due on 2/19.</font>
 		</li> -->
-		<li>
+		<!-- <li>
 			<font size="4"> <b>03/26/2023:</b> The schedule of project presention is <a href="./presentation_schedule.htm" target="_blank"><font color="#0099ff">out</font></a>.</font>
 		</li>
 		<li>
 			<font size="4"> <b>03/10/2023:</b> The project proposal is due on 3/10.</font>
-		</li>
+		</li> -->
 		<li>
-			<font size="4"> <b>01/13/2024:</b> Course website has been launched.</font>
+			<font size="4"> <b>01/13/2025:</b> Course website has been launched.</font>
 		</li>
 	</ul>
 
@@ -178,9 +183,9 @@ course website regularly for updated reading materials.</font>
 		<li>
 			<font size="4"> <a href="./course_project.htm" target="_blank"><font color="#0099ff">Course Project</font></a></font>
 		</li>
-		<li>
+		<!-- <li>
 			<font size="4"> <a href="./presentation_schedule.htm" target="_blank"><font color="#0099ff">Course Project Presentation Schedule</font></a></font>
-		</li> 
+		</li>  -->
 	</ul>
 	
 	
@@ -282,21 +287,6 @@ course website regularly for updated reading materials.</font>
 		</li>
 	</ol>
 	</p>
-
-	<!--
-	<p style="text-align:justify">
-	<font size="4" ><b>Paper review list 7</b> (<font size="4" color="#FF0000">due on 4/18</font>):</font>
-	<ol start="14">
-		<li>
-			<font size="4" > Z. Liu, Y. Lin, Y. Cao, H. Hu, Y. Wei, Z. Zhang, S. Lin, and B. Guo, Hierarchical Vision Transformer using Shifted Windows, <i>ICCV</i>, 2021.</font>
-		</li>
-		<li>
-			<font size="4" >N. Carion, F. Massa, G. Synnaeve, N. Usunier, A. Kirillov, and S. Zagoruyko, End-to-End Object Detection with Transformers, <i>ECCV</i>, 2020.</font>
-		</li>
-	</ol>
-	</p>
-	
-	</br> -->
 	
 	
 	<HR>
@@ -315,7 +305,7 @@ course website regularly for updated reading materials.</font>
 		</tr> 
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 1</b> <br> 1/16 </font></td>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 1/14 </font></td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				<b>Introduction</b> </font>
 			</td>
@@ -325,16 +315,14 @@ course website regularly for updated reading materials.</font>
 		
 		
 		<tr>
-			<td width=100 style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 1/18 </font></td>
+			<td width=100 style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 1/16 </font></td>
 			<td width=500  style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Machine learning overview</b> </font></td>
 			<td width=500 style='width:480.0pt;background:#eeeeffFB;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning, Ch 1-5 </font></td>
 			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 
-		
-		
 		<tr>
-			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 2</b> <br> 1/23 </font></td>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 1/21 </font></td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				<b>Neural network basics-1</b> </font>
 			</td>
@@ -343,7 +331,7 @@ course website regularly for updated reading materials.</font>
 		</tr>
 
 		<tr>
-			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4">  1/25 </font></td>
+			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4">  1/23 </font></td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
 				<font size="4"><b>Neural network basics-2</b>  </font>
 			</td>
@@ -351,6 +339,7 @@ course website regularly for updated reading materials.</font>
 			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
 
+	<!-- 
 		<tr>
 			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4">  <b>Week 3</b> <br> 1/30 </font></td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 
@@ -384,7 +373,7 @@ course website regularly for updated reading materials.</font>
 				<font size="4"><b>PyTorch Tutorial</b>  </font>
 			</td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Guest Lecture by Xiaoqiong Liu</font></td>
+			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Guest Lecture by Mingchen Li</font></td>
 		</tr>
 
 		<tr>
@@ -471,22 +460,6 @@ course website regularly for updated reading materials.</font>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 10 </font></td>
 			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 		</tr>
-
-
-		<!-- <tr>
-			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 2/29 </font></td>
-			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
-			<font size="4"> 
-					<ul style="margin-top:5px;margin-bottom:5px;">
-						<li>
-							<font size="4"> Basics and Architecture (cont.)</font>
-						</li>
-					</ul>
-			</font>
-			</td>
-			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> Deep Learning Ch 10 </font></td>
-			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4"> -</font> </font></td>
-		</tr> -->
 
 		<tr>
 			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 8</b> <br> 3/5 <br> 3/7 </font></td>
@@ -640,9 +613,6 @@ course website regularly for updated reading materials.</font>
 					<li>
 						<font size="4"> Bias and Ethics (optional)</font>
 					</li>
-					<!-- <li>
-						<font size="4" color="#FF0000"> Review for Final</font>
-					</li> -->
 				</ul>
 			</font>
 			</td>
@@ -658,9 +628,6 @@ course website regularly for updated reading materials.</font>
 					<li>
 						<font size="4"> Project Presentation</font>
 					</li>
-					<!-- <li>
-						<font size="4" color="#FF0000"> Review for Final</font>
-					</li> -->
 				</ul>
 			</font>
 			</td>
@@ -676,9 +643,6 @@ course website regularly for updated reading materials.</font>
 					<li>
 						<font size="4"> Project Presentation</font>
 					</li>
-					<!-- <li>
-						<font size="4" color="#FF0000"> Review for Final</font>
-					</li> -->
 				</ul>
 			</font>
 			</td>
@@ -694,9 +658,6 @@ course website regularly for updated reading materials.</font>
 					<li>
 						<font size="4"> Project Presentation</font>
 					</li>
-					<!-- <li>
-						<font size="4" color="#FF0000"> Review for Final</font>
-					</li> -->
 				</ul>
 			</font>
 			</td>
@@ -715,46 +676,8 @@ course website regularly for updated reading materials.</font>
 			</td>
 			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
 			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4"> -</font> </font></td>
-		</tr>
-
-		
-
-		<!-- 
-
-		
-
-		<tr>
-			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> 4/20 </font></td>
-			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
-			<font size="4"> 
-				<b>Project Presentation</b> (<a href="./presentation_schedule.htm" target="_blank"><font color="#0099ff">presentation schedule</font></a>)
-			</font>
-			</td>
-			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4"> -</font> </font></td>
-		</tr>
-
-		<tr>
-			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 15</b> </font></td>
-			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
-			<font size="4"> 
-				<b>Project Presentation</b> (<a href="./presentation_schedule.htm" target="_blank"><font color="#0099ff">presentation schedule</font></a>)
-			</font>
-			</td>
-			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4"> -</font> </font></td>
-		</tr>
-
-		<tr>
-			<td width=100  style='width:80.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> <b>Week 16</b> </font></td>
-			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'>
-				<font size="4" color="#FF0000"> 
-					<b>Final Exam</b> <br> (10:30 am - 12:30 pm, Thursday, May 11)
-			</font>
-			</td>
-			<td width=500 style='width:480.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4"> - </font></td>
-			<td width=200 style='width:180.0pt;background:#eeeeff;padding:2.25pt 2.25pt 2.25pt 2.25pt'><font size="4" > <font size="4"> -</font> </font></td>
 		</tr> -->
+
 
 	</table>
 	</p>
