--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -144,8 +144,8 @@
 
         <section class="section speaker">
             <div class="speaker-text">
-                <h3><font color="#355DDC">Title: How to Sell Your Story</font></h3>
-                <p><b>Speaker:</b> <a href="#", target="_blank">Drs. Fan, Feng, and Shi</a></p>
+                <h3><font color="#355DDC">Title: TDB</font></h3>
+                <p><b>Speaker:</b> <a href="#", target="_blank">Dawei Gao</a></p>
                 <p><b>Time:</b> 11:00am-12:00pm on 03-03-2025 (Monday)</p>
                 <p><b>Room:</b> F219 </p>
             </div>
