--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -85,7 +85,7 @@
 
 		<h2><font color="#FA8072">Schedule (temporary)</font></h2>
 
-        <section class="section speaker">
+        <!-- <section class="section speaker">
             <div class="speaker-text">
                 <h3><font color="#355DDC">Title: TBD</font></h3>
                 <p><b>Speaker:</b> <a href="#", target="_blank">Dawei Gao</a></p>
@@ -95,7 +95,7 @@
             <!-- <div class="speaker-img">
                 <img src="welcome7.png" alt="Speaker Image"> 
             </div> -->
-        </section>
+        </section> -->
 
         <section class="section speaker">
             <div class="speaker-text">
