--- a/publications.html
+++ b/publications.html
@@ -86,9 +86,9 @@
 				<td><img src="./publication/semo.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 				<td valign=top>
 					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
-						<font style="font-weight:bold">Augment and Criticize: Exploring Informative Samples for Semi-Supervised Monocular 3D Object Detection</font>
+						<font style="font-weight:bold">The Devil is in the Quality: Exploring Informative Samples for Semi-Supervised Monocular 3D Object Detection</font>
 						<br>
-						<font color="#000000" >Z. Zhang, Zhenyu Li, H. Wang, H. Yuan, K. Wang, and Heng Fan</font>
+						<font color="#000000" >Z. Zhang, Zhenyu Li, H. Wang, H. Yuan, K. Wang, and H. Fan</font>
 						<br>
 						<font>IEEE International Conference on Robotics & Automation (<b>ICRA</b>), 2025.</font>
 						<br>
