--- a/publications.html
+++ b/publications.html
@@ -88,14 +88,62 @@
 					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 						<font style="font-weight:bold">The Devil is in the Quality: Exploring Informative Samples for Semi-Supervised Monocular 3D Object Detection</font>
 						<br>
-						<font color="#000000" >Z. Zhang, Zhenyu Li, H. Wang, H. Yuan, K. Wang, and H. Fan</font>
+						<font color="#000000" >Z. Zhang, Z. Li, H. Wang, H. Yuan, K. Wang, and H. Fan</font>
 						<br>
 						<font>IEEE International Conference on Robotics & Automation (<b>ICRA</b>), 2025.</font>
 						<br>
 						paper
 						<br>
 					</p>
-			</td>
+				</td>
+			</tr>
+
+			<tr>
+				<td><img src="./publication/cgtrack.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">CGTrack: Cascade Gating Network with Hierarchical Feature Aggregation for UAV Tracking</font>
+						<br>
+						<font color="#000000">W. Li, X. Liu, H. Fan&dagger;, and L. Zhang&dagger;</font>
+						<br>
+						<font>IEEE International Conference on Robotics & Automation (<b>ICRA</b>), 2025.</font>
+						<br>
+						paper &nbsp; code
+						<br>
+					</p>
+				</td>
+			</tr>
+
+			<tr>
+				<td><img src="./publication/lamot.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">LaMOT: Language-Guided Multi-Object Tracking</font>
+						<br>
+						<font color="#000000">Y. Li*, X. Liu*, L. Liu, H. Fan&dagger;, and L. Zhang&dagger;</font>
+						<br>
+						<font>IEEE International Conference on Robotics & Automation (<b>ICRA</b>), 2025.</font>
+						<br>
+						<a href="https://arxiv.org/abs/2406.08324" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://github.com/Nathan-Li123/LaMOT" target="_blank"><font color="#2D61FF">code</font></a>
+						<br>
+					</p>
+				</td>
+			</tr>
+
+			<tr>
+				<td><img src="./publication/tastvg.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">Knowing Your Target : Target-Aware Transformer Makes Better Spatio-Temporal Video Grounding</font>
+						<br>
+						<font color="#000000" >X. Gu, Y. Shen, C. Luo, T. Luo, Y. Huang, Y. Lin, H. Fan&dagger;, Libo Zhang&dagger;</font>
+						<br>
+						<font>International Conference on Learning Representations (<b>ICLR</b>), 2025.</font>
+						<br>
+						paper &nbsp; code
+						<br>
+					</p>
+				</td>
 			</tr>
 
 			<tr>
