--- a/publications.html
+++ b/publications.html
@@ -136,7 +136,7 @@
 					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
 						<font style="font-weight:bold">Knowing Your Target : Target-Aware Transformer Makes Better Spatio-Temporal Video Grounding</font>
 						<br>
-						<font color="#000000" >X. Gu, Y. Shen, C. Luo, T. Luo, Y. Huang, Y. Lin, H. Fan&dagger;, Libo Zhang&dagger;</font>
+						<font color="#000000" >X. Gu, Y. Shen, C. Luo, T. Luo, Y. Huang, Y. Lin, H. Fan&dagger;, L. Zhang&dagger;</font>
 						<br>
 						<font>International Conference on Learning Representations (<b>ICLR</b>), 2025.</font>
 						<br>
