--- a/publications.html
+++ b/publications.html
@@ -90,7 +90,7 @@
 						<br>
 						<font color="#000000">Y. Li*, X. Liu*, L. Liu, H. Fan&dagger;, and L. Zhang&dagger;</font>
 						<br>
-						<font>IEEE International Conference on Robotics & Automation (<b>ICRA</b>), 2025.</font>
+						<font>IEEE International Conference on Robotics and Automation (<b>ICRA</b>), 2025.</font>
 						<br>
 						<a href="https://arxiv.org/abs/2406.08324" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://github.com/Nathan-Li123/LaMOT" target="_blank"><font color="#2D61FF">code</font></a>
 						<br>
@@ -106,7 +106,7 @@
 						<br>
 						<font color="#000000">W. Li, X. Liu, H. Fan&dagger;, and L. Zhang&dagger;</font>
 						<br>
-						<font>IEEE International Conference on Robotics & Automation (<b>ICRA</b>), 2025.</font>
+						<font>IEEE International Conference on Robotics and Automation (<b>ICRA</b>), 2025.</font>
 						<br>
 						paper &nbsp; code
 						<br>
@@ -122,7 +122,7 @@
 						<br>
 						<font color="#000000" >Z. Zhang, Z. Li, H. Wang, H. Yuan, K. Wang, and H. Fan</font>
 						<br>
-						<font>IEEE International Conference on Robotics & Automation (<b>ICRA</b>), 2025.</font>
+						<font>IEEE International Conference on Robotics and Automation (<b>ICRA</b>), 2025.</font>
 						<br>
 						paper
 						<br>
