--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -108,7 +108,7 @@
 
         <section class="section speaker">
             <div class="speaker-text">
-                <h3><font color="#355DDC">Title: TBD</font></h3>
+                <h3><font color="#355DDC">Title: Evidential Binary Cross Entropy Loss: Using Evidence to Feel Model Nervousness  </font></h3>
                 <p><b>Speaker:</b> <a href="#", target="_blank">Minghao Li</a></p>
                 <p><b>Time:</b> 11:00am-12:00pm on 02-03-2025 (Monday)</p>
                 <p><b>Room:</b> F219 </p>
@@ -144,7 +144,7 @@
 
         <section class="section speaker">
             <div class="speaker-text">
-                <h3><font color="#355DDC">Title: TDB</font></h3>
+                <h3><font color="#355DDC">Title: High-Resolution Image Synthesis with Latent Diffusion Models</font></h3>
                 <p><b>Speaker:</b> <a href="#", target="_blank">Dawei Gao</a></p>
                 <p><b>Time:</b> 11:00am-12:00pm on 03-03-2025 (Monday)</p>
                 <p><b>Room:</b> F219 </p>
