--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -92,9 +92,9 @@
                 <p><b>Time:</b> 11:00am-12:00pm on 01-20-2024 (Monday)</p>
                 <p><b>Room:</b> F219 </p>
             </div>
-            <!-- <div class="speaker-img">
+            <div class="speaker-img">
                 <img src="welcome7.png" alt="Speaker Image"> 
-            </div> -->
+            </div>
         </section> -->
 
         <section class="section speaker">
