--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -117,7 +117,7 @@
 
         <section class="section speaker">
             <div class="speaker-text">
-                <h3><font color="#355DDC">Title: TBD</font></h3>
+                <h3><font color="#355DDC">Title: Advancing Cross-domain Discriminability in Continual Learning of Vision-Language Models</font></h3>
                 <p><b>Speaker:</b> <a href="#", target="_blank">Md Abdullah Al Forhad</a></p>
                 <p><b>Time:</b> 11:00am-12:00pm on 02-10-2025 (Monday)</p>
                 <p><b>Room:</b> F219 </p>
