--- a/publications.html
+++ b/publications.html
@@ -138,7 +138,7 @@
 						<br>
 						<font color="#000000" >X. Gu, Y. Shen, C. Luo, T. Luo, Y. Huang, Y. Lin, H. Fan&dagger;, L. Zhang&dagger;</font>
 						<br>
-						<font>International Conference on Learning Representations (<b>ICLR</b>), 2025.</font>
+						<font>International Conference on Learning Representations (<b>ICLR</b>), 2025. (<b>Oral</b>)</font>
 						<br>
 						paper &nbsp; code
 						<br>
