--- a/group.html
+++ b/group.html
@@ -38,8 +38,8 @@
 		<li><font style="font-weight:bold; line-height: 120%">Jashia Mitayeegiri</font>, volunteer research assistant</li> <!--(female)--> 
 		
 		<li><font style="font-weight:bold; line-height: 120%">Hasini Kanuru</font>, Undergraduate student</li> <!--(female)--> 
-		<li><font style="font-weight:bold; line-height: 120%">Michelle Li</font>, High School student</li> <!-- (female) -->
-		<li><font style="font-weight:bold; line-height: 120%">Luke Liu</font>, High School student</li> <!-- entennial High School -->
+		<li><font style="font-weight:bold; line-height: 120%">Michelle Li</font>, K-12 student from TAMS</li> <!-- (female) -->
+		
 		
 		
     </ul>
@@ -60,7 +60,8 @@
 	<br>
 	<ul style="margin-top:5px;">
 
-		<li><font style="font-weight:bold; line-height: 120%">Jonas Li</font>, High School student</li>
+		<li><font style="font-weight:bold; line-height: 120%">Luke Liu</font>, High School student, 2025</li> <!-- entennial High School -->
+		<li><font style="font-weight:bold; line-height: 120%">Jonas Li</font>, K-12 student from TAMS, 2024</li>
 		<li><font style="font-weight:bold; line-height: 120%">Arpit Khavate</font>, High School student, 2024</li> <!-- ebanon Trail High School -->
 		<li><font style="font-weight:bold; line-height: 120%">Syed Abdullah Imam</font>, Undergraduate student, 2024</li>
 		<li><font style="font-weight:bold; line-height: 120%">Joshua Yao</font>, Undergraduate student, 2024</li> <!--(minority)--> 
