--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -126,7 +126,7 @@
 
         <section class="section speaker">
             <div class="speaker-text">
-                <h3><font color="#355DDC">Title: TBD</font></h3>
+                <h3><font color="#355DDC">Title: Chain of Agents: Large Language Models Collaborating on Long-Context Tasks</font></h3>
                 <p><b>Speaker:</b> <a href="#", target="_blank">Zexuan Meng</a></p>
                 <p><b>Time:</b> 11:00am-12:00pm on 02-17-2025 (Monday)</p>
                 <p><b>Room:</b> F219 </p>
