--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 		<a href="http://maps.google.com/" target="_blank"><font color="#2D61FF">gMap</font></a>   &nbsp; 
 		<a href="https://www.thecvf.com/" target="_blank"><font color="#2D61FF">CVF</font></a>   &nbsp; 
 		<a href="https://ieeexplore.ieee.org/Xplore/home.jsp" target="_blank"><font color="#2D61FF">IEEE</font></a> &nbsp; 
-		<a href="https://csrankings.org/#/index?all&us" target="_blank"><font color="#2D61FF">CSRankings</font></a>
+		<a href="https://csrankings.org/#/index?all&us" target="_blank"><font color="#2D61FF">CSRankings</font></a> &nbsp; 
+		<a href="https://www.editorialmanager.com/pr/default.aspx?adobe_mc=MCMID%3D29504155241840331153107436488397987575%7CMCORGID%3D4D6368F454EC41940A4C98A6%2540AdobeOrg%7CTS%3D1740507429" target="_blank"><font color="#2D61FF">PR</font></a>
 	
 	<HR>
 	
