--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 
 	<font size="4" color="black"><b>News</b>&nbsp;<img style="" src="./personal/news.gif" border="0"></font>
     <ul style="margin-top:5px;">
+		<li><font style="font-weight:bold; line-height: 120%">2025-02:</font> A paper on multi-view 3D object detection is accepted to <a href="https://cvpr.thecvf.com/" target="_blank"><font><font color="#2D61FF">CVPR 2025</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2025-02:</font> Three papers on tracking (pdf/code, <a href="https://arxiv.org/pdf/2406.08324" target="_blank"><font><font color="#2D61FF">pdf</font></font></a>/<a href="https://github.com/Nathan-Li123/LaMOT" target="_blank"><font><font color="#2D61FF">code</font></font></a>) and 3D detection (pdf) are accepted to <a href="https://2025.ieee-icra.org/" target="_blank"><font><font color="#2D61FF">ICRA 2025</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2025-01:</font> An <b>oral</b> paper on spatio-temporal video grounding (pdf/code) is accepted to <a href="https://iclr.cc/" target="_blank"><font><font color="#2D61FF">ICLR 2025</font></font></a>.</li>
 		<li><font style="font-weight:bold; line-height: 120%">2024-12:</font> I will be serving as an Area Chair for <a href="https://iccv.thecvf.com/" target="_blank"><font><font color="#2D61FF">ICCV 2025</font></font></a> and <a href="https://2025.ieeeicme.org/" target="_blank"><font><font color="#2D61FF">ICME 2025</font></font></a>.</li>
