--- a/publications.html
+++ b/publications.html
@@ -124,7 +124,7 @@
 						<br>
 						<font>IEEE International Conference on Robotics and Automation (<b>ICRA</b>), 2025.</font>
 						<br>
-						paper
+						<a href="./publication/icra25-3d-detectopn.pdf" target="_blank"><font color="#2D61FF">paper</font></a>
 						<br>
 					</p>
 				</td>
@@ -140,7 +140,7 @@
 						<br>
 						<font>International Conference on Learning Representations (<b>ICLR</b>), 2025. (<b>Oral</b>)</font>
 						<br>
-						paper &nbsp; code
+						<a href="https://arxiv.org/abs/2502.11168" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://github.com/HengLan/TA-STVG" target="_blank"><font color="#2D61FF">code</font></a>
 						<br>
 					</p>
 				</td>
