--- a/service.html
+++ b/service.html
@@ -26,6 +26,22 @@
 
 <div class="central_body">
 	
+	<font size="4" color="black"><b>Editorial Services</b></font>
+	<br>
+	
+    <ul style="margin-top:5px;">
+		
+		<li>
+			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
+				Associate Editor, Pattern Recognition (<font style="font-weight:bold">PR</font>), 2025-now
+				<br>
+			</p>
+		</li>
+		
+		
+    </ul>
+	
+	<HR>
 	
 	<font size="4" color="black"><b>Senior Conference Committee</b></font>
 	<br>
