--- a/publications.html
+++ b/publications.html
@@ -154,7 +154,7 @@
 						<br>
 						<font color="#000000" >Y. Li, Z. Xiao, L. Yang, D. Meng, X. Zhou, H. Fan, and L. Zhang</font>
 						<br>
-						<font>IEEE Transactions on Neural Networks and Learning Systems (<b>T-NNLS</b>), 2025, in press. </font>
+						<font>IEEE Transactions on Neural Networks and Learning Systems (<b>T-NNLS</b>), 36(3): 5454-5468, 2025. </font>
 						<br>
 						<a href="https://arxiv.org/abs/2308.07537" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://github.com/HengLan/AttMOT" target="_blank"><font color="#2D61FF">code</font></a>
 						<br>
