--- a/publications.html
+++ b/publications.html
@@ -83,6 +83,22 @@
 		<table border=0 cellpadding=4>
 
 			<tr>
+				<td><img src="./publication/cvpr25.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
+				<td valign=top>
+					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
+						<font style="font-weight:bold">CorrBEV: Multi-View 3D Object Detection by Correlation Learning with Multi-modal Prototypes</font>
+						<br>
+						<font color="#000000">Z. Xue, M. Guo, H. Fan, S. Zhang, and Z. Zhang</font>
+						<br>
+						<font>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2025.</font>
+						<br>
+						pdf &nbsp; code
+						<br>
+					</p>
+				</td>
+			</tr>
+
+			<tr>
 				<td><img src="./publication/lamot.png", style="border-radius:5% 5% 5% 5%; border-color:#C8C4C3;" border="1" width=120 height="80">	</TD>
 				<td valign=top>
 					<p style="line-height: 110%; margin-top: 5px; margin-bottom: 5px;">
