--- a/publications.html
+++ b/publications.html
@@ -92,7 +92,7 @@
 						<br>
 						<font>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2025.</font>
 						<br>
-						pdf &nbsp; code
+						paper &nbsp; code
 						<br>
 					</p>
 				</td>
