--- a/service.html
+++ b/service.html
@@ -236,14 +236,14 @@
 
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				The Visual Computer  (<font style="font-weight:bold">TVC</font>)
+				Knowledge-Based Systems  (<font style="font-weight:bold">KBS</font>)
 				<br>
 			</p>
 		</li>
 
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				Knowledge-Based Systems
+				The Visual Computer  (<font style="font-weight:bold">TVC</font>)
 				<br>
 			</p>
 		</li>
