--- a/publications.html
+++ b/publications.html
@@ -124,7 +124,7 @@
 						<br>
 						<font>IEEE International Conference on Robotics and Automation (<b>ICRA</b>), 2025.</font>
 						<br>
-						paper &nbsp; code
+						<a href="./publication/ICRA_2025_CGTrack.pdf" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://github.com/Nightwatch-Fox11/CGTrack" target="_blank"><font color="#2D61FF">code</font></a>
 						<br>
 					</p>
 				</td>
