--- a/publications.html
+++ b/publications.html
@@ -337,7 +337,7 @@
 						<br>
 						<font color="#000000">X. Gu*, H. Fan*, Y. Huang, T. Luo, and L. Zhang</font>
 						<br>
-						<font>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2024 </font>
+						<font>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2024. </font>
 						<br>
 						<a href="https://arxiv.org/abs/2401.01578" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="./publication/CG-STVG-CVPR24-poster.pdf" target="_blank"><font color="#2D61FF">poster</font></a> &nbsp; <a href="https://github.com/HengLan/CGSTVG" target="_blank"><font color="#2D61FF">code</font></a>  
 						<br>
@@ -460,7 +460,7 @@
 					<br>
 					<font color="#000000" >Y. Feng, Z. Meng, C. Clemmer, H. Fan, and Y. Huang</font>
 					<br>
-					<font>ACM International Conference on Advances in Geographic Information Systems (<b>SIGSPATIAL</b>), 2023 </font>
+					<font>ACM International Conference on Advances in Geographic Information Systems (<b>SIGSPATIAL</b>), 2023. </font>
 					<br>
 					<a href="./publication/SIGSPATIAL-2023.pdf" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://sigspatial.yunhefeng.me/" target="_blank"><font color="#2D61FF">project-data</font></a>
 					<br>
