--- a/index.html
+++ b/index.html
@@ -42,18 +42,20 @@
 src="personal/at.gif">cs.stonybrook.edu  -->
 			<br>
 			
-			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[<a href="personal/Fan-selected-cv.pdf" target="_blank"><font color="#2D61FF">Curriculum Vitae</font></a>]
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;[<a href="https://llavi-lab.github.io/" target="https://llavi-lab.github.io/"><font color="#2D61FF">LLaVi Lab</font></a>]
+			[<a href="personal/Fan-selected-cv.pdf" target="_blank"><font color="#2D61FF">Curriculum Vitae</font></a>]
 			[<a href="https://scholar.google.com/citations?user=MVQYJiMAAAAJ" target="https://scholar.google.com/citations?user=MVQYJiMAAAAJ"><font color="#2D61FF">Google Scholar</font></a>]
 			[<a href="https://www.linkedin.com/in/heng-fan-64697aaa/" target="https://www.linkedin.com/in/heng-fan-64697aaa/"><font color="#2D61FF">LinkedIn</font></a>]
 			[<a href="https://dblp.org/pid/20/10120-1.html" target="https://dblp.org/pid/20/10120-1.html"><font color="#2D61FF">DBLP</font></a>]
-			[<a href="https://hengfan2010.github.io/aiseminar/" target="https://hengfan2010.github.io/aiseminar/"><font color="#2D61FF">AI Seminar</font></a>]
+			<!-- [<a href="https://hengfan2010.github.io/aiseminar/" target="https://hengfan2010.github.io/aiseminar/"><font color="#2D61FF">AI Seminar</font></a>] -->
+			
         </div>
     </div>
 	
 	<HR>
 	
     <font size="4" color="black"><b>Short Bio</b></font>
-    <p style="margin-top:5px;"><font>Heng Fan is currently an Assistant Professor in the <a href="https://computerscience.engineering.unt.edu/"><font color="#2D61FF">Department of Computer Science and Engineering</font></a> at the <a href="https://www.unt.edu/"><font color="#2D61FF">University of North Texas</font></a>. He received his B.S. from Huazhong Agricultural University in 2013 and Ph.D. (advised by <a href="https://www3.cs.stonybrook.edu/~hling/"><font><font color="#2D61FF">Professor Haibin Ling</font></font></a>) from Stony Brook University in 2021, respectively. His research interests include computer vision with a particular interest in various video analysis tasks using vision and language, robotics with a focus on robot vision perception, and medical image analysis. He serves or has served as an Associate Editor for <i>Pattern Recognition</i> (PR) and as Area Chairs for major computer vision relevant conferences such as ICCV (2025), WACV (2022-2025), and ICME (2025).
+    <p style="margin-top:5px;"><font>Heng Fan is currently an Assistant Professor in the <a href="https://computerscience.engineering.unt.edu/"><font color="#2D61FF">Department of Computer Science and Engineering</font></a> at the <a href="https://www.unt.edu/"><font color="#2D61FF">University of North Texas</font></a>, and a faculty member of the <a href="https://llavi-lab.github.io/" target="https://llavi-lab.github.io/"><font color="#2D61FF">LLaVi Lab</font></a>. He received his B.S. from Huazhong Agricultural University in 2013 and Ph.D. (advised by <a href="https://www3.cs.stonybrook.edu/~hling/"><font><font color="#2D61FF">Professor Haibin Ling</font></font></a>) from Stony Brook University in 2021, respectively. His research interests include computer vision with a particular interest in various video analysis tasks using vision and language, robotics with a focus on robot vision perception, and medical image analysis. He serves or has served as an Associate Editor for <i>Pattern Recognition</i> (PR) and as Area Chairs for major computer vision relevant conferences such as ICCV (2025), WACV (2022-2025), and ICME (2025).
     
 	<HR>
 	
