--- a/service.html
+++ b/service.html
@@ -108,7 +108,7 @@
 
 		<li>
 			<p style="line-height: 120%; margin-top: 5px; margin-bottom: 5px;">
-				IEEE/RSJ International Conference on Intelligent Robots and Systems (<font style="font-weight:bold">IROS</font>)</font>, <font size="3">2024</font>
+				IEEE/RSJ International Conference on Intelligent Robots and Systems (<font style="font-weight:bold">IROS</font>)</font>, <font size="3">2024, 2025</font>
 				<br>
 			</p>
 		</li>
