--- a/aiseminar/index.htm
+++ b/aiseminar/index.htm
@@ -170,7 +170,7 @@
 
         <section class="section speaker">
             <div class="speaker-text">
-                <h3><font color="#355DDC">Title: TBD</font></h3>
+                <h3><font color="#355DDC">Title: DP-OPT: Make Large Language Model Your Privacy-Preserving Prompt Engineer</font></h3>
                 <p><b>Speaker:</b> <a href="#", target="_blank">Mingchen Li</a></p>
                 <p><b>Time:</b> 11:00am-12:00pm on 03-31-2025 (Monday)</p>
                 <p><b>Room:</b> F219 </p>
