--- a/publications.html
+++ b/publications.html
@@ -156,7 +156,7 @@
 						<br>
 						<font>International Conference on Learning Representations (<b>ICLR</b>), 2025. (<b>Oral</b>)</font>
 						<br>
-						<a href="https://arxiv.org/abs/2502.11168" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="https://github.com/HengLan/TA-STVG" target="_blank"><font color="#2D61FF">code</font></a>
+						<a href="https://arxiv.org/abs/2502.11168" target="_blank"><font color="#2D61FF">paper</font></a> &nbsp; <a href="./publication/TA-STVG-ICLR2025-slide.pdf" target="_blank"><font color="#2D61FF">slide</font></a> &nbsp; <a href="./publication/TASTVG-ICLR25-poster.pptx" target="_blank"><font color="#2D61FF">poster</font></a> &nbsp; <a href="https://github.com/HengLan/TA-STVG" target="_blank"><font color="#2D61FF">code</font></a>
 						<br>
 					</p>
 				</td>
