--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ src="personal/at.gif">cs.stonybrook.edu  -->
 			[<a href="https://scholar.google.com/citations?user=MVQYJiMAAAAJ" target="https://scholar.google.com/citations?user=MVQYJiMAAAAJ"><font color="#2D61FF">Google Scholar</font></a>]
 			[<a href="https://www.linkedin.com/in/heng-fan-64697aaa/" target="https://www.linkedin.com/in/heng-fan-64697aaa/"><font color="#2D61FF">LinkedIn</font></a>]
 			[<a href="https://dblp.org/pid/20/10120-1.html" target="https://dblp.org/pid/20/10120-1.html"><font color="#2D61FF">DBLP</font></a>]
-			<!-- [<a href="https://hengfan2010.github.io/aiseminar/" target="https://hengfan2010.github.io/aiseminar/"><font color="#2D61FF">AI Seminar</font></a>] -->
+			[<a href="https://hengfan2010.github.io/aiseminar/" target="https://hengfan2010.github.io/aiseminar/"><font color="#2D61FF">AI Seminar</font></a>]
 			
         </div>
     </div>
